@@ -141,6 +141,7 @@ private slots:
     void slotTabCloseRequested(int index);
     void slotTabMoved(int from, int to);
     void closeTabFromButton();
+    void enableUpdates();
 
 protected:
     int mainTabBarWidth() const;
