@@ -5,6 +5,7 @@ Version 1.6.2
     * fixed: showing more default search engines with same name
     * fixed: small fix in loading previews in speeddial
     * fixed: incorrect exception rules handling in AdBlock
+    * fixed: flickering when removing tabs from tabbar
 
 Version 1.6.1
     * released 26 January 2014
